--- a/css/legales.styles.css
+++ b/css/legales.styles.css
@@ -32,7 +32,7 @@
     width: 100%;
     height: 8rem;
     margin: auto;
-    background-image: url(images/lucas-santos-wU2PEf1UVvM-unsplash-01.jpg);
+    background-image: url(../images/lucas-santos-wU2PEf1UVvM-unsplash-01.jpg);
     background-size: cover;
     filter: brightness(60%);
     position: absolute; /*El position absolute permite que otros elementos ocupen el mismo espacio*/
